# wavelet-quantile-normalization

./: 00_prepare_datasets.py  10_run_artifact_removal.py  11_run_artifact_removal_vary_snr.py  20_computation_cost.py  methods.py  pyproject.toml  readme.md  tools.py
data/: .gitignore
data/eog-data/: readme.md
data/physiobank-motion-artifacts/: ANNOTATORS  RECORDS  eeg_1.trigger  eeg_10.hea  eeg_11.hea  eeg_11.trigger  eeg_12.hea  eeg_12.trigger  eeg_13.hea  eeg_13.trigger  eeg_14.hea  eeg_14.trigger  eeg_15.hea  eeg_15.trigger  eeg_16.hea  eeg_16.trigger  eeg_17.hea  eeg_17.trigger  eeg_18.hea  eeg_18.trigger  eeg_19.hea  eeg_19.trigger  eeg_2.hea  eeg_2.trigger  eeg_20.hea  eeg_20.trigger  eeg_21.hea  eeg_21.trigger  eeg_22.hea  eeg_23.hea  eeg_23.trigger  eeg_3.hea  eeg_3.trigger  eeg_4.hea  eeg_4.trigger  eeg_6.hea  eeg_6.trigger  eeg_7.hea  eeg_7.trigger  eeg_8.hea  (+2 more)
extras/surrogates/: readme.txt
